Bug #195078.  LOCATION signal was triggered when subframe loads would happen, not just on the primary load.  Patch from chpe@gnome.org.  r+sr=blizzard